# ReGenesis--multi-architectural-70-LDO-

./: BITNET_INTEGRATION.yaml  CLAUDE_FIX_PLAN.md  CODEBASE_AUDIT.md  COMMUNICATION_FIX_SUMMARY.md  COMPLETE_FEATURE_INVENTORY.md  COMPLETE_NAVIGATION_MAP.md  COMPLETE_NAVIGATION_STRUCTURE.md  CORRECT_NAVIGATION_STRUCTURE.md  Claude.env  FINAL_GATE_AUDIT.md  Fileupdates  GATE_AUDIT_REPORT.md  GATE_CONFIG_FIX_VERIFICATION.md  GATE_HOTSWAP_GUIDE.md  GATE_IMAGE_MAPPING.md  KAI_DOMAIN_AUDIT.md  LDO_100_PERCENT_READY.md  LDO_FINAL_FIXES.md  NAVIGATION_STRUCTURE_COMPLETE.md  NAVIGATION_WIRING_PLAN.md  NAVIGATION_WIRING_TRUTH.md  README.md  REGENESIS_VISION_ROADMAP.md  REGRESSION_FIX_REPORT.md  RESTORATION_COMPLETE.md  ReGenesis Readme and Framework.md  ReGenesisCustomizationScreens.kt  ReGenesisCustomizationSettings.kt  ReGenesisNavigationIntegration.kt  Re_Genesis FrameWork.md  SCREEN_MAPPING_COMPLETE.md  STUB_AND_GATE_AUDIT.md  THEME_ANIMATION_ORGANIZATION.md  analyze_notebook.py  apply_notebook_code.py  build.gradle.kts  build_errors.txt  build_errors_2.txt  build_final.txt  build_log.txt  (+35 more)
.claude/: Claude.env  settings.local.json
agents/: META_INSTRUCT_AGENTS.md
app/: BITNET_INTEGRATION.yaml  build.gradle.kts
app/src/main/cpp/bitnet/: CMakeLists.txt  bitnet.h  bitnet_bridge.cpp
build-logic/: apply-yukihook-conventions.gradle.kts
core-module/: apply-yukihook-conventions.gradle.kts  build.gradle.kts
docs/: Fileupdates  META_INSTRUCT_APP.md  META_INSTRUCT_INDEX.md  REGENESIS_ORGANISM_FEEDBACK.md  ReGenesis_Validation_Portfolio.md  ReGenesis_vs_Manus_Comparison.md  (+1 more)
(+1830 files in other folders)
